SkriptCommand - Use suggested method